fix z-index toggle + add shadow box

--- a/WACAI18/css/style.css
+++ b/WACAI18/css/style.css
@@ -128,7 +128,7 @@ hr.small {
 
 #menu-toggle {
     position: fixed;
-    z-index: 1;
+    z-index: 10000;
     top: 0;
     right: 0;
 }
@@ -136,6 +136,7 @@ hr.small {
 #sidebar-wrapper.active {
     right: 250px;
     width: 250px;
+    box-shadow: -3px 2px 50px rgba(0, 0, 0, 0.84);
     -webkit-transition: all .4s ease 0s;
     -moz-transition: all .4s ease 0s;
     -ms-transition: all .4s ease 0s;
